# torfast

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: architecture.md  latest-results.md  proof-summary.md  quality-bar.md  roadmap.md  source-map.md  upstreams.md
scripts/: build_arti_release.sh  build_arti_release_flowctl.sh  build_c_tor.sh  fetch_upstreams.sh
tests/: __init__.py  test_analyze_torfast_browser_compare.py  test_arti_quality_config.py  test_arti_rpc_path.py  test_boot_compare.py  test_browser_defaults.py  test_browser_install.py  test_browser_quality.py  test_browser_startup_seed.py  test_c_tor_boot_compare.py  test_circuit_quality.py  test_conflux_compare.py  test_dir_cache_seed.py  test_launch_torfast_browser.py  test_path_rules.py  test_torfast_browser_compare.py  test_torfast_cli.py  test_torfast_control.py  test_torfast_launch_gate_compare.py  test_torfast_main.py  test_torfast_runtime_compare.py  test_torfast_warm_open_benchmark_compare.py  test_torfast_warm_open_compare.py
tools/: analyze_browser_compare.py  analyze_torfast_browser_compare.py  bench_http.py  check_arti_quality_config.py  check_arti_rpc_path.py  check_c_tor_circuits.py  launch_torfast_browser.py  report_results.py  run_arti_baseline.py  run_baseline.py  run_boot_compare.py  run_browser_compare.py  run_browser_compare_current_winner.py  run_browser_compare_hidden_service.py  run_c_tor_boot_compare.py  run_cache_diagnostic.py  run_conflux_compare.py  (+7 more)
(+16 files in other folders)
